new project added

--- a/index.html
+++ b/index.html
@@ -32,7 +32,13 @@
       <a href="https://sarahrossitter.wixsite.com/shepaints">View Project</a>
       <h3>Project Three</h3>
       <p>A decorating site using wix</p>
-    </div>
+    </div> 
+      <div class="tile">
+      <img src="/images/shop.jpg" alt="Project 3" />
+      <a href="https://minishop5.netlify.app">View Project</a>
+      <h3>Project Four</h3>
+      <p>A shop collecting data from a json file</p>
+    </div>/
     <!-- Add more tiles as needed -->
   </div>
 </body>
