image file paths

--- a/index.html
+++ b/index.html
@@ -16,25 +16,25 @@
 
   <div class="grid-container">
     <div class="tile">
-      <img src="/images/triviaScreenShot.jpg" alt="Project 1" />
+      <img src="./images/triviaScreenShot.jpg" alt="Project 1" />
       <a href="https://sarahdev5.github.io/SimpleQuiz/">View Project</a>
       <h3>Project One</h3>
       <p>A quiz using an external API</p>
     </div>
     <div class="tile">
-      <img src="/images/ArtyWalls.jpg" alt="Project 2" />
+      <img src="./images/ArtyWalls.jpg" alt="Project 2" />
       <a href="https://github.com/SarahDev5/ArtyWalls.git">View Project</a>
       <h3>Project Two</h3>
       <p>Arty Wallpaper site designed using CSS and Javascript</p>
     </div>
     <div class="tile">
-      <img src="/images/ShePaints.jpg" alt="Project 3" />
+      <img src="./images/ShePaints.jpg" alt="Project 3" />
       <a href="https://sarahrossitter.wixsite.com/shepaints">View Project</a>
       <h3>Project Three</h3>
       <p>A decorating site using wix</p>
     </div> 
       <div class="tile">
-      <img src="/images/shop.jpg" alt="Project 3" />
+      <img src="./images/shop.jpg" alt="Project 3" />
       <a href="https://minishop5.netlify.app">View Project</a>
       <h3>Project Four</h3>
       <p>A shop collecting data from a json file</p>
