--- a/index.html
+++ b/index.html
@@ -39,6 +39,13 @@
       <h3>Project Four</h3>
       <p>A shop collecting data from a json file</p>
     </div>/
+    </div> 
+      <div class="tile">
+      <img src="./images/lesson.jpg" alt="Project 3" />
+      <a href="https://sarahdev5.github.io/Lessons/">View Project</a>
+      <h3>Project Five</h3>
+      <p>A page for booking lessons with me</p>
+    </div>/
     <!-- Add more tiles as needed -->
   </div>
 </body>
