added new project

--- a/index.html
+++ b/index.html
@@ -9,11 +9,18 @@
   <title>SarahDev5 My Portfolio</title>
 </head>
 <body>
-  <header>
-    <h1>My Portfolio</h1>
-    <p>I am a web developer specialising in HTML, CSS and Javascript. My current interests include AI for web development. I have 30 years experience in Education.</p>
-  </header>
-
+<header>
+   <h1>My Portfolio</h1>
+  <div class="intro">
+    <p>
+      I am a web developer specialising in HTML, CSS and Javascript.<br> 
+      My current interests include AI for web development. 
+      I have 30 years experience in Education.
+    </p>
+    <img src="./images/me.jpg" alt="Profile Picture" class="profile-pic"/>
+  </div>
+</header>
+</body>
   <div class="grid-container">
     <div class="tile">
       <img src="./images/triviaScreenShot.jpg" alt="Project 1" />
@@ -44,7 +51,7 @@
       <a href="https://sarahdev5.github.io/Lessons/">View Project</a>
       <h3>Project Five</h3>
       <p>A page for booking lessons with me</p>
-    </div>/
+    </div>
     <!-- Add more tiles as needed -->
   </div>
 </body>
