added new site address for artywalls

--- a/index.html
+++ b/index.html
@@ -30,7 +30,7 @@
     </div>
     <div class="tile">
       <img src="./images/ArtyWalls.jpg" alt="Project 2" />
-      <a href="https://github.com/SarahDev5/ArtyWalls.git">View Project</a>
+      <a href="https://artywalls.netlify.app">View Project</a>
       <h3>Project Two</h3>
       <p>Arty Wallpaper site designed using CSS and Javascript</p>
     </div>
