added more blurb

--- a/index.html
+++ b/index.html
@@ -13,9 +13,10 @@
    <h1>My Portfolio</h1>
   <div class="intro">
     <p>
-      I am a web developer specialising in HTML, CSS and Javascript.<br> 
-      My current interests include AI for web development. 
-      I have 30 years experience in Education.
+       I’m a web developer with expertise in HTML, CSS, and JavaScript, blending creative design with technical precision.  
+  With 30 years of experience in education, I bring clarity and accessibility to every project.  
+  My current focus is exploring how AI can enhance web development.  
+  View my projects below to see how I combine innovation with practical solutions.
     </p>
     <img src="./images/me.jpg" alt="Profile Picture" class="profile-pic"/>
   </div>
