added sixth project

--- a/index.html
+++ b/index.html
@@ -26,33 +26,39 @@
     <div class="tile">
       <img src="./images/triviaScreenShot.jpg" alt="Project 1" />
       <a href="https://sarahdev5.github.io/SimpleQuiz/">View Project</a>
-      <h3>Project One</h3>
+      <h3>Quiz Project</h3>
       <p>A quiz using an external API</p>
     </div>
     <div class="tile">
       <img src="./images/ArtyWalls.jpg" alt="Project 2" />
       <a href="https://artywalls.netlify.app">View Project</a>
-      <h3>Project Two</h3>
+      <h3>Bespoke Wallpaper Progect</h3>
       <p>Arty Wallpaper site designed using CSS and Javascript</p>
     </div>
     <div class="tile">
       <img src="./images/ShePaints.jpg" alt="Project 3" />
       <a href="https://sarahrossitter.wixsite.com/shepaints">View Project</a>
-      <h3>Project Three</h3>
+      <h3>Female Decorating Project</h3>
       <p>A decorating site using wix</p>
     </div> 
       <div class="tile">
-      <img src="./images/shop.jpg" alt="Project 3" />
+      <img src="./images/shop.jpg" alt="Project 4" />
       <a href="https://minishop5.netlify.app">View Project</a>
-      <h3>Project Four</h3>
+      <h3>Mini Shop Project</h3>
       <p>A shop collecting data from a json file</p>
     </div>
       <div class="tile">
-      <img src="./images/lesson.jpg" alt="Project 3" />
+      <img src="./images/lesson.jpg" alt="Project 5" />
       <a href="https://sarahdev5.github.io/Lessons/">View Project</a>
-      <h3>Project Five</h3>
+      <h3>Lesson Booking Project</h3>
       <p>A page for booking lessons with me</p>
     </div>
+    bakefront.netlify.app
+     <div class="tile">
+      <img src="./images/bakefront.jpg" alt="Project 6" />
+      <a href="https://bakefront.netlify.app">View Project</a>
+      <h3>A Cake baking Project</h3>
+      <p>A homemade cakes site with an external API and static json file</p>
     <!-- Add more tiles as needed -->
   </div>
 </body>
