--- a/index.html
+++ b/index.html
@@ -20,9 +20,8 @@
     </p>
     <img src="./images/me.jpg" alt="Profile Picture" class="profile-pic"/>
 </header>
+<div class="container">
   <section id="home">
-  </div>
-</body>
   <div class="grid-container">
     <div class="tile">
       <a href="https://sarahdev5.github.io/SimpleQuiz/">
@@ -79,7 +78,6 @@
       <p>"Working with Sarah was a pleasure. She delivered high-quality work on time and exceeded our expectations."</p>
       <h4> Fiona | Business Owner</h4>
     </div>
-  </div>
   </section>
   <section id="contact">
     <h2>Contact Me</h2>
@@ -96,5 +94,6 @@
       <button type="submit">Send</button>
     </form>
   </section> 
+</div>
 </body>
 </html>
