added new link to site

--- a/index.html
+++ b/index.html
@@ -54,7 +54,7 @@
       <div class="tile">
         <a href="https://sarahdev5.github.io/Lessons/">
       <img src="./images/lesson.jpg" alt="Project 5" />
-      <a href="https://sarahdev5.github.io/Lessons/">View Project</a>
+      <a href="https://bookalesson.netlify.app">View Project</a>
       <h3>Lesson Booking Project</h3></a>
       <p>A page for booking lessons with me</p>
     </div>
