--- a/index.html
+++ b/index.html
@@ -14,8 +14,7 @@
    <h1>My Portfolio</h1>
   <div class="intro">
     <p>
-       I’m a web developer with expertise in HTML, CSS, and JavaScript, blending creative design with technical precision.  
-  With 30 years of experience in education, I bring clarity and accessibility to every project.  
+       I’m a web developer who blends creative design with technical precision.  I bring clarity and accessibility to every project.  
   My current focus is exploring how AI can enhance web development.  
   View my projects below to see how I combine innovation with practical solutions.
     </p>
@@ -29,42 +28,42 @@
       <img src="./images/triviaScreenShot.jpg" alt="Project 1" />
       <a href="https://sarahdev5.github.io/SimpleQuiz/">View Project</a>
       <h3>Quiz Project</h3></a>
-      <p>A quiz using an external API</p>
+      <p>A quiz which fetches data from an external source</p>
     </div>
     <div class="tile">
       <a href="https://artywalls.netlify.app">
       <img src="./images/ArtyWalls.jpg" alt="Project 2" />
       <a href="https://artywalls.netlify.app">View Project</a>
       <h3>Bespoke Wallpaper Project</h3></a>
-      <p>Arty Wallpaper site designed using CSS and Javascript</p>
+      <p>A site using original art to make wallpaper</p>
     </div>
     <div class="tile">
       <a href="https://sarahrossitter.wixsite.com/shepaints">
       <img src="./images/ShePaints.jpg" alt="Project 3" />
       <a href="https://sarahrossitter.wixsite.com/shepaints">View Project</a>
       <h3>Female Decorating Project</h3></a>
-      <p>A decorating site using wix</p>
+      <p>A decorating site using Wix</p>
     </div> 
       <div class="tile">
         <a href="https://minishop5.netlify.app">
       <img src="./images/shop.jpg" alt="Project 4" />
       <a href="https://minishop5.netlify.app">View Project</a>
       <h3>Mini Shop Project</h3></a>
-      <p>A shop collecting data from a json file</p>
+      <p>A shop collecting data from an external source</p>
     </div>
       <div class="tile">
         <a href="https://sarahdev5.github.io/Lessons/">
       <img src="./images/lesson.jpg" alt="Project 5" />
       <a href="https://bookalesson.netlify.app">View Project</a>
       <h3>Lesson Booking Project</h3></a>
-      <p>A page for booking lessons with me</p>
+      <p>A website for booking private lessons with a tutor</p>
     </div>
      <div class="tile">
       <a href="https://bakefront.netlify.app">
       <img src="./images/bakefront.jpg" alt="Project 6" />
       <a href="https://bakefront.netlify.app">View Project</a>
       <h3>A Cake baking Project</h3></a>
-      <p>A homemade cakes site with an external API and static json file</p>
+      <p>A homemade cakes site with recipe finder and cakes for sale</p>
     <!-- Add more tiles as needed -->
   </div>
   </div>
