--- a/index.html
+++ b/index.html
@@ -49,7 +49,7 @@
       <img src="./images/shop.jpg" alt="Project 4" />
       <a href="https://minishop5.netlify.app">View Project</a>
       <h3>Mini Shop Project</h3></a>
-      <p>A shop collecting data from an external source</p>
+      <p>A mock online shop using data from an external source</p>
     </div>
       <div class="tile">
         <a href="https://sarahdev5.github.io/Lessons/">
