edited intro message

--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
    <h1>My Portfolio</h1>
   <div class="intro">
     <p>
-       I’m a web developer who blends creative design with technical precision.  I bring clarity and accessibility to every project.  
+       I am a web developer (artist and teacher) who blends creative design with technical precision.  I bring clarity and accessibility to every project.  
   My current focus is exploring how AI can enhance web development.  
   View my projects below to see how I combine innovation with practical solutions.
     </p>
