added new screenshot

--- a/index.html
+++ b/index.html
@@ -32,7 +32,7 @@
     </div>
     <div class="tile">
       <a href="https://artywalls.netlify.app">
-      <img src="./images/ArtyWalls.jpg" alt="Project 2" />
+      <img src="./images/artywallsfront.jpg" alt="Project 2" />
       <a href="https://artywalls.netlify.app">View Project</a>
       <h3>Bespoke Wallpaper Project</h3></a>
       <p>A site using original art to make wallpaper</p>
