edited project links so they open in separate pages

--- a/index.html
+++ b/index.html
@@ -26,42 +26,42 @@
     <div class="tile">
       <a href="https://sarahdev5.github.io/SimpleQuiz/">
       <img src="./images/triviaScreenShot.jpg" alt="Project 1" />
-      <a href="https://sarahdev5.github.io/SimpleQuiz/">View Project</a>
+      <a href="https://sarahdev5.github.io/SimpleQuiz/" target="_blank">View Project</a>
       <h3>Quiz Project</h3></a>
       <p>A quiz which fetches data from an external source</p>
     </div>
     <div class="tile">
       <a href="https://artywalls.netlify.app">
       <img src="./images/artywallsfront.jpg" alt="Project 2" />
-      <a href="https://artywalls.netlify.app">View Project</a>
+      <a href="https://artywalls.netlify.app" target="_blank">View Project</a>
       <h3>Bespoke Wallpaper Project</h3></a>
       <p>A site using original art to make wallpaper</p>
     </div>
     <div class="tile">
       <a href="https://sarahrossitter.wixsite.com/shepaints">
       <img src="./images/ShePaints.jpg" alt="Project 3" />
-      <a href="https://sarahrossitter.wixsite.com/shepaints">View Project</a>
+      <a href="https://sarahrossitter.wixsite.com/shepaints" target="_blank">View Project</a>
       <h3>Female Decorating Project</h3></a>
       <p>A decorating site using Wix</p>
     </div> 
       <div class="tile">
         <a href="https://minishop5.netlify.app">
       <img src="./images/shop.jpg" alt="Project 4" />
-      <a href="https://minishop5.netlify.app">View Project</a>
+      <a href="https://minishop5.netlify.app" target="_blank">View Project</a>
       <h3>Mini Shop Project</h3></a>
       <p>A mock online shop using data from an external source</p>
     </div>
       <div class="tile">
         <a href="https://sarahdev5.github.io/Lessons/">
       <img src="./images/lesson.jpg" alt="Project 5" />
-      <a href="https://bookalesson.netlify.app">View Project</a>
+      <a href="https://bookalesson.netlify.app" target="_blank">View Project</a>
       <h3>Lesson Booking Project</h3></a>
       <p>A website for booking private lessons with a tutor</p>
     </div>
      <div class="tile">
       <a href="https://bakefront.netlify.app">
       <img src="./images/bakefront.jpg" alt="Project 6" />
-      <a href="https://bakefront.netlify.app">View Project</a>
+      <a href="https://bakefront.netlify.app" target="_blank">View Project</a>
       <h3>A Cake baking Project</h3></a>
       <p>A homemade cakes site with recipe finder and cakes for sale</p>
     <!-- Add more tiles as needed -->
